EXT pub/options.css
*   {
	box-sizing: border-box;
}
body {
	font-size: 80%;
	background: #f9f9f9;
}
.main   {
	padding: 10px;
	width: 990px;
	margin: 0 auto;
}
h1  {
	font-weight: 600;
	font-size: 2em;
}
h2  {
	margin: .1em 0 .7em;
	font-size: 1.6em;
	font-weight: 500;
}
h3  {
	margin: 1em 0 .7em;
	font-size: 1.25em;
}
h4  {
	margin: 10px 0;
}
p   {
	font-size: 1.1em;
}
a.external:before {
	content: "\2197\0020";
	white-space: nowrap;
}
.settings-block  {
	margin: 0 auto 15px;
	padding-bottom: 15px;
	border-bottom: 1px solid lightgray;
}
.heading    {
	position: relative;
}
.heading header {
	position: absolute;
	top: 0;
	right: 0;
	text-align: right;
}
.heading h1 {
	margin-top: 0px;
}
.heading h2 {
	font-size: 1.3em;
	color: #666;
	font-weight: normal;
}
.heading a.link-block {
	position: absolute;
	width: 100%;    height: 100%;
	top: 0; left: 0;
}
.clear  {
	clear: both;
}
/* default inputs & labels */
label   {
	margin-right: 15px;
	margin-bottom: 8px;
}
label span  {
	display: inline-block;
}
label.check,
label.radio,
label.radio-item {
	cursor: pointer;
	padding: 0;
}
label.radio span    {
	margin-right: 16px;
}
input[type="checkbox"]    {
	margin-right: 8px;
	cursor: pointer;
	vertical-align: top;
	margin-top: 2px;
}
input[type="radio"]    {
	margin-right: 8px;
	cursor: pointer;
	vertical-align: top;
}
input[type="text"]    {
	width: 260px;
	min-height: 2em;
	transition: background-color 0.3s;
	font-size: 1.2em;
	border-color: #ddd;
}
input[type="text"].required:placeholder-shown {
	border-bottom-color: #ff8700;
}
input[name="context[name]"],
input[name="link[name]"] {
	width: 150px;
}
input[name="context[url]"]  {
	width: 300px;
}
input[name="link[url]"] {
	width: 500px;
}
input[type="color"] {
	vertical-align: top;    /* middle doesn't work well here */
	margin-top: 4px;
	height: 1.9em;
	margin-left: 8px;
	cursor: pointer;
}
input.color-text    {
	width: 64px;
	margin-left: 8px;
}
input[type=range]   {
	margin: 0;
	vertical-align: middle;
	position: relative;
	top: -3px;
	width: 50%;
}

label.hide  {
	position: absolute;
	padding: 3px 0 0 0 !important;
	top: 15px;
	right: 60px;
	cursor: pointer;
}
label.text span    {
	margin-right: 8px;
}
label.text.short span   {
	width: calc(100% - 274px);
}
label.select span:nth-child(1)  {
	width: 230px;
}
label.select select {
	min-width: 150px;
}

label.range span:nth-child(1)    {
	width: 100px;
}
label.range input[type="range"]    {
	margin-left: 10px;
}
label.range input.range-text    {
	border-color: #ddd;
	width: 40px;
}
	label.range input.range-text:hover    {
		border-color: #bbb;
	}
.textarea-holder    {
	position: relative;
	margin-right: 20px;
}
	.textarea-holder textarea   {
		width: 100%;
	}
	.textarea-cover    {
		position: absolute;
		left: 1px;        bottom: 4px;
		height: 20px;   width: 96%;
		pointer-events: none;
		box-shadow: inset -20px -20px 30px -10px rgba(255,255,255,1);
	}
abbr    {
	cursor: help;
}

/* buttons */
button  {
	/*margin-bottom: 8px !important;*/
	cursor: pointer;
	/*border: none !important;*/
}
.btn {
	display: inline-block;
	margin-bottom: 0;
	font-weight: normal;
	text-align: center;
	vertical-align: middle;
	background-image: none !important;
	background-color: #dedede;
	border: 1px solid #c4c4c4;
	white-space: nowrap;
	padding: 8px 16px;
	line-height: 0.9;
	border-radius: 6px;
	user-select: none;
	box-shadow: none !Important;
	min-width: 28px;
	min-height: 28px;
	transition: background-color .15s, border-color .15s;
}
	.btn:hover {
		color: #333333;
		/*background-color: #c4c4c4;*/
		background-color: rgba(140, 218, 233, 0.4);
		border-color: #a6a6a6;
	}
	.btn .icon  {
		width: 16px;    height: 16px;
		display: inline-block;
		background: transparent no-repeat 0 0;
	}
	.btn .text {
		display: inline-block;
		line-height: 1.35em;
		vertical-align: top;
	}

button.btn.remove   {
	position: absolute;
	top: 10px;  right: 10px;
	padding: 8px 9px;
	background-color: transparent;
	/*background-size: 60% 60%;*/
}
button.remove .icon  {  background-image: url(/Icons/Options/Delete.svg);   }
button.add .icon  {     background-image: url(/Icons/Options/Add.svg);  }
button.save .icon  {    background-image: url(/Icons/Options/Save.svg);  }
button.import .icon  {  background-image: url(/Icons/Options/Import.svg);  }
button.export .icon  {  background-image: url(/Icons/Options/Export.svg);  }
button.repodialog .icon  {   background-image: url(/Icons/Options/Repository.svg);  }
button.fetch .icon  {   background-image: url(/Icons/Options/Refresh.svg);  }
button.getAll .icon  {   background-image: url(/Icons/Options/GetWholePack.svg);  }
button.compare .icon  { background-image: url(/Icons/Options/Compare.svg);  }
button.replace .icon  { background-image: url(/Icons/Options/Replace.svg);  }

button.env_contextAddDefaultSet {
	display: none;
}
.between-buttons    {
	padding: 0 8px;
}

/* "Use max-height in the transition and not height. And set a value on max-height to something bigger than your box will ever get." */
.section-foldable   {
	overflow-y: hidden;
	transition: ease .4s;
	max-height: 0;
	padding: 0;
}
.section-foldable.expand   {
	padding: initial;
	overflow: auto;
	max-height: 250em;
}

.projects-container input[type="text"]    { /* possibly also all other text-like modern inputs */
	background-color: transparent;
	border-color: transparent;
}
.projects-container input[type="text"]:focus,
.projects-container input[type="text"]:hover    {
	background-color: #fff;
	border-color: #bfbfbf;
}

.contexts,
.links {
	padding-top: 16px;
}

.projectItem:hover,
.contextItem:hover,
.linkItem:hover    {
	box-shadow: 3px 2px 6px 0px #aaa5;
}

.projectItem    {
	position: relative;
	border: 1px solid transparent;
	background: #ddd;
	border-radius: 3px;
	padding: 10px;
	margin-bottom: 10px;
	transition: opacity 0.4s, box-shadow 0.3s, margin 0.3s;
}
.projectItem.collapse    {
	background: #eee;
}
.projectItem:not(.collapse) {
	margin-top: 20px;
	margin-bottom: 30px;
}
/* ... */

